fix minor spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ h2, h3, h4, h5 {
 }
 
 .box {
-  padding: 15px 10px;
+  padding: 20px 10px;
   margin: 15px 5px;
   height: 95%;
 }
@@ -53,6 +53,7 @@ h2, h3, h4, h5 {
 
 .picture1 img {
   width: 100%;
+  padding: 0px 10px;
 }
 
 .picture2 img {
@@ -67,6 +68,11 @@ h2, h3, h4, h5 {
 .catering {
   background-color: #E6BB4B;
   color: #424269;
+}
+
+.thank {
+  background-color: #424269;
+  color: #FFF;
 }
 
 .menu {
